--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,8 @@
     <string name="sign_in_error">관리자 하고 싶어요?</string>
     <string name="empty_user">승인된 글이 없음</string>
     <string name="empty_admin">승인을 기다리는 글이 없음</string>
+    <string name="offline">연결되지 않음</string>
+    <string name="etc">기타</string>
+    <string name="bug_report">버그 신고</string>
+    <string name="github">깃허브</string>
 </resources>
