--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="deny">거부</string>
     <string name="admin_tip">승인 할 때 한 번 더 생각하기</string>
     <string name="more">더보기</string>
-    <string name="home">매인</string>
+    <string name="home">메인</string>
     <string name="admin">관리자</string>
     <string name="report">제보하기</string>
     <string name="navigation_drawer_open">서랍 열기</string>
